feat: implement product use cases
