# src/infra/http/routes/ProductRoutes.ts
@@ -6,9 +6,10 @@ const productRoutes = Router();
 const productController = new ProductController();
 
 productRoutes.post('/', productController.create);
-// productRoutes.get('/', productController.list);
-// productRoutes.get('/:id', productController.findById);
-// productRoutes.patch('/:id', productController.changeproductStatus);
-// productRoutes.delete('/:id', orderController.delete);
+productRoutes.get('/', productController.list);
+productRoutes.get('/:id', productController.findById);
+productRoutes.get('/category/:id', productController.findAllByCategory);
+productRoutes.patch('/:id', productController.update);
+productRoutes.delete('/:id', productController.delete);
 
 export default productRoutes;
